--- a/app/src/main/res/layout/activity_no_detail_un_load.xml
+++ b/app/src/main/res/layout/activity_no_detail_un_load.xml
@@ -17,7 +17,7 @@
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:text="发货单号："
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/no_detail_unload_billNo"
@@ -25,13 +25,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="2.5"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
         <TextView
@@ -41,7 +40,7 @@
             android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:text="车牌号："
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/no_detail_unload_plateNo"
@@ -49,14 +48,12 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="2.5"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
         <TextView
@@ -65,15 +62,33 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:text="此次实卸重量:"
-            android:textSize="16sp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/no_detail_unload_act_weight"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_weight="2"
-            android:textSize="16sp" />
+            android:layout_weight="1"
+            android:textColor="#FF0000"
+            android:textSize="14sp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:text="此次实卸件数:"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/no_detail_unload_act_number"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="0.5"
+            android:textColor="#FF0000"
+            android:textSize="14sp" />
     </LinearLayout>
 
     <ImageView
@@ -149,7 +164,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/no_detail_unload_recycle_view"
         android:layout_width="match_parent"
-        android:layout_height="245dp" />
+        android:layout_height="260dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
