--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -83,55 +83,53 @@
         android:id="@+id/textView4"
         android:layout_width="72dp"
         android:layout_height="41dp"
-        android:text="@string/app_login_paswd"
-        android:gravity="center"
-        android:textSize="17sp"
-        android:layout_marginStart="27dp"
-        android:layout_marginEnd="29dp"
-        app:layout_constraintRight_toLeftOf="@+id/user_password_edit"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="27dp"
         android:layout_marginRight="29dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        android:gravity="center"
+        android:text="@string/app_login_paswd"
+        android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/user_password_edit"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.543"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <EditText
         android:id="@+id/user_password_edit"
         android:layout_width="166dp"
         android:layout_height="39dp"
+        android:layout_marginRight="32dp"
         android:gravity="center_vertical"
-        android:textSize="17sp"
         android:inputType="textPassword"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
+        android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="29dp"
         app:layout_constraintRight_toRightOf="@+id/login_button"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="29dp" />
+        app:layout_constraintVertical_bias="0.539"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <Button
         android:id="@+id/login_button"
         android:layout_width="0dp"
         android:layout_height="48dp"
+        android:layout_marginLeft="26dp"
+        android:layout_marginRight="26dp"
+        android:layout_marginTop="44dp"
         android:text="@string/app_lgoin_button_login"
-        android:layout_marginStart="26dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginEnd="26dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="26dp"
-        android:layout_marginRight="26dp" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <ImageButton
         android:id="@+id/delete_button1"
